--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -7,14 +7,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
-  --ifm-code-font-size: 95%;
+  --ifm-color-primary: #0fa3b1;
+  --ifm-color-primary-dark: #0e939f;
+  --ifm-color-primary-darker: #0d8b96;
+  --ifm-color-primary-darkest: #0b727c;
+  --ifm-color-primary-light: #10b3c3;
+  --ifm-color-primary-lighter: #11bbcc;
+  --ifm-color-primary-lightest: #13d4e6;
 }
 
 .docusaurus-highlight-code-line {
